--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,10 +27,10 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}:${{ env.tag }} .
-          docker tag ghcr.io/${{ github.repository }}:${{ env.tag }} ghcr.io/${{ github.repository }}:latest
+          docker build -t ghcr.io/${{ env.repo_name }}:${{ env.tag }} .
+          docker tag ghcr.io/${{ env.repo_name }}:${{ env.tag }} ghcr.io/${{ env.repo_name }}:latest
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/${{ github.repository }}:${{ env.tag }}
-          docker push ghcr.io/${{ github.repository }}:latest
+          docker push ghcr.io/${{ env.repo_name }}:${{ env.tag }}
+          docker push ghcr.io/${{ env.repo_name }}:latest
